# permit-fastmcp

./: Makefile  README.md  dev-plan.md  llms.txt  pyproject.toml  requirements.txt
.cursor/rules/: .cursorrules  basic.mdc
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
docs/: advanced-configuration.md  configuration-reference.md  getting-started.md  identity-modes.md  policy-mapping.md  troubleshooting.md
permit_fastmcp/: __init__.py  logger_config.py  main.py  run_example_server.py
permit_fastmcp/example_server/: example.py
permit_fastmcp/middleware/: config.py  middleware.py
tests/: test_example_server.py
